@@ -101,8 +101,8 @@ features_exclude[dependencies][panopoly_pages] = panopoly_pages
 features_exclude[dependencies][panelizer] = panelizer
 hidden = 1
 
-; Information added by Drupal.org packaging script on 2021-07-21
-version = "7.x-1.83"
+; Information added by Drupal.org packaging script on 2022-01-20
+version = "7.x-1.85"
 core = "7.x"
 project = "panopoly_test"
-datestamp = "1626902827"
+datestamp = "1642705048"
